--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,20 @@
+@InProceedings{10.1007/978-3-031-47994-6_23,
+author="Collenette, Joe
+and Dennis, Louise
+and Fisher, Michael",
+editor="Bramer, Max
+and Stahl, Frederic",
+title="Prospective Responsibility for Multi-agent Systems",
+booktitle="Artificial Intelligence XL",
+year="2023",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="247--252",
+abstract="The notion of `responsibility' as a higher-level construct that dynamically impacts each agent's goals, priorities and actions is very appealing, especially since humans regularly use such concepts in everyday reasoning. In this paper we describe a new model of responsibilities that is philosophically-grounded. We identify traits from the philosophical literature to model, focusing on prospective responsibility and task responsibility. These responsibilities comprise heterogeneous entities, including tasks to be completed, properties that need to be maintained, and sub-responsibilities that need to be fulfilled.",
+isbn="978-3-031-47994-6",
+note={[<span class="car">Computational Agent Responsibility</span>]}
+}
+
 @InProceedings{EXTRAAMAS23,
 author="Xu, Yifan
 and Collenette, Joe
