--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,13 @@
+@ARTICLE{10380243,
+  author={Weir, Charles and Dyson, Anna and Jogunola, Olamide and Dennis, Louise and Paxton-Fear, Katie},
+  journal={Computer}, 
+  title={Interlinked Computing in 2040: Safety, Truth, Ownership, and Accountability}, 
+  year={2024},
+  volume={57},
+  number={1},
+  pages={59-68},
+  doi={10.1109/MC.2023.3318377}}
+
 @InProceedings{10.1007/978-3-031-47994-6_23,
 author="Collenette, Joe
 and Dennis, Louise
