--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,21 @@
+@InProceedings{10.1007/978-3-031-43264-4_22,
+author="Stringer, Peter
+and Cardoso, Rafael C.
+and Dixon, Clare
+and Fisher, Michael
+and Dennis, Louise A.",
+editor="Malvone, Vadim
+and Murano, Aniello",
+title="Adaptive Cognitive Agents: Updating Action Descriptions and Plans",
+booktitle="Multi-Agent Systems",
+year="2023",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="345--362",
+abstract="In this paper we present an extension of Belief-Desire-Intention agents which can adapt their performance in response to changes in their environment. We consider situations in which the agent's actions no longer perform as anticipated. Our agents maintain explicit descriptions of the expected behaviour of their actions, are able to track action performance, learn new action descriptions and patch affected plans at runtime. Our main contributions are the underlying theoretical mechanisms for data collection about action performance, the synthesis of new action descriptions from this data and the integration with plan reconfiguration. The mechanisms are supported by a practical implementation to validate the approach.",
+isbn="978-3-031-43264-4",
+note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>,<span class="tas_vn">TAS Verifiability Node</span>, <span class="car">Computational Agent Responsibility</span>]}
+}
 @ARTICLE{10380243,
   author={Weir, Charles and Dyson, Anna and Jogunola, Olamide and Dennis, Louise and Paxton-Fear, Katie},
   journal={Computer}, 
