--- a/pubs.bib
+++ b/pubs.bib
@@ -92,6 +92,19 @@ isbn="978-3-031-47994-6"
 	note={[<span class="rain">RAIN</span>]}
 }
 
+@unpublished{VAMS23-report,
+  TITLE = {{Verification of Autonomous Mobile Systems: Directions for Future Developments}},
+  AUTHOR = {Fisher, Michael and Ibanez-Guzman, Javier and Doufene, Abdelkrim and Quintero, Karla},
+  URL = {https://hal.science/hal-04265529},
+  NOTE = {Policy Report},
+  YEAR = {2023},
+  MONTH = {September},
+  KEYWORDS = {Verification \& validation ; Software testing ; simulation ; Scenarios ; Autonomy},
+  PDF = {https://hal.science/hal-04265529/file/Policy%20Report%20VAMS%202023.pdf},
+  HAL_ID = {hal-04265529},
+  HAL_VERSION = {v1}
+}
+
 @INPROCEEDINGS{BuitenDennisSchwammberger23,
   author={Buiten, Miriam C. and Dennis, Louise A. and Schwammberger, Maike},
   booktitle={2023 IEEE 31st International Requirements Engineering Conference Workshops (REW)}, 
