--- a/pubs.bib
+++ b/pubs.bib
@@ -52,6 +52,73 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>,<span 
   pages={59-68},
   doi={10.1109/MC.2023.3318377}}
 
+
+@Article{fisher_et_al:DagRep.13.9.103,
+  author =	{Fisher, Michael and Slavkovik, Marija and Dobrosovestnova, Anna and Schuster, Nick},
+  title =	{{Roadmap for Responsible Robotics (Dagstuhl Seminar 23371)}},
+  pages =	{103--115},
+  journal =	{Dagstuhl Reports},
+  ISSN =	{2192-5283},
+  year =	{2024},
+  volume =	{13},
+  number =	{9},
+  editor =	{Fisher, Michael and Slavkovik, Marija and Dobrosovestnova, Anna and Schuster, Nick},
+  publisher =	{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address =	{Dagstuhl, Germany},
+  URL =		{https://drops.dagstuhl.de/entities/document/10.4230/DagRep.13.9.103},
+  doi =		{10.4230/DagRep.13.9.103},
+  annote =	{Keywords: Robotics, Responsibility, Trust, Fairness, Predictability, Understandability, Ethics},
+note={[<span class="car">Computational Agent Responsibility</span>]}}
+}
+
+@ARTICLE{10632563,
+  author={Kourtis, Georgios and Dixon, Clare and Fisher, Michael},
+  journal={IEEE Transactions on Software Engineering}, 
+  title={Parameterized Verification of Leader/Follower Systems via Arithmetic Constraints}, 
+  year={2024},
+  volume={50},
+  number={9},
+  pages={2458-2471},
+  keywords={Arithmetic;Automata;Logic;Control systems;Polynomials;Formal verification;Europe;Formal methods;parameterized verification;distributed systems;arithmetic constraints},
+  doi={10.1109/TSE.2024.3440587},
+note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="s4">S4</span>]}}
+
+@ARTICLE{10368348,
+  author={Farrell, Marie and Bradbury, Matthew and Cardoso, Rafael C. and Fisher, Michael and Dennis, Louise A. and Dixon, Clare and Sheik, Al Tariq and Yuan, Hu and Maple, Carsten},
+  journal={IEEE Transactions on Dependable and Secure Computing},
+  title="{Security-Minded Verification of Cooperative Awareness Messages}",
+  year={2024},
+  volume={21},
+  number={4},
+  pages={4048-4065},
+  keywords={Security;Protocols;Runtime;Safety;Monitoring;Computer crime;Threat modeling;Verification;security;safety;threat modeling;connected autonomous vehicles;cooperative awareness messages},
+  doi={10.1109/TDSC.2023.3345543},
+note={[<span class="tas_vn">TAS Verifiability Node</span>]}
+}
+
+@article{BeckerDSAKFCF24,
+  author       = {Leandro Buss Becker and
+                  Anthony Downs and
+                  Craig Schlenoff and
+                  Justin Albrecht and
+                  Zeid Kootbally and
+                  Angelo Ferrando and
+                  Rafael C. Cardoso and
+                  Michael Fisher},
+  title        = "{Effects of the Human Presence among Robots in the {ARIAC} 2023 Industrial
+                  Automation Competition}",
+  journal      =  {Journal of Intelligent and Robotic Systems},
+  volume       = {110},
+  number       = {3},
+  pages        = {112},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/s10846-024-02148-6 [doi.org]},
+  doi          = {10.1007/S10846-024-02148-6},
+  timestamp    = {Thu, 22 Aug 2024 20:24:29 +0200},
+  biburl       = {https://dblp.org/rec/journals/jirs/BeckerDSAKFCF24.bib [dblp.org]},
+  bibsource    = {dblp computer science bibliography, https://dblp.org [dblp.org]}
+}
+
 @InProceedings{10.1007/978-3-031-47994-6_23,
 author="Collenette, Joe
 and Dennis, Louise
