--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,14 @@
+@INPROCEEDINGS{10704818,
+  author={Shaukat, Nabil and Dubey, Shival and Kaddouh, Bilal and Blight, Andy and Mudrich, Lenka and Ribeiro, Pedro and Araujo, Hugo and Richardson, Rob and Dennis, Louise and Cavalcanti, Ana and Mousavi, Mohammad},
+  booktitle={2024 20th IEEE/ASME International Conference on Mechatronic and Embedded Systems and Applications (MESA)}, 
+  title={Trustworthy ROS Software Architecture for Autonomous Drones Missions: From RoboChart Modelling to ROS Implementation}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1-7},
+  keywords={Mechatronics;Software architecture;Surveillance;Computer architecture;Software;Personnel;Formal specifications;Robots;Testing;Drones;robochart;ros;drone;firefighting;software;robots;trustworthy architecture;trustworthy},
+  doi={10.1109/MESA61532.2024.10704818}}
+
 @inproceedings{quan-etal-2024-enhancing,
     title = "Enhancing Ethical Explanations of Large Language Models through Iterative Symbolic Refinement",
     author = "Quan, Xin  and
