--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,22 @@
+@inproceedings{quan-etal-2024-verification,
+    title = "Verification and Refinement of Natural Language Explanations through {LLM}-Symbolic Theorem Proving",
+    author = "Quan, Xin  and
+      Valentino, Marco  and
+      Dennis, Louise A.  and
+      Freitas, Andre",
+    editor = "Al-Onaizan, Yaser  and
+      Bansal, Mohit  and
+      Chen, Yun-Nung",
+    booktitle = "Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2024",
+    address = "Miami, Florida, USA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.emnlp-main.172",
+    pages = "2933--2958",
+    abstract = "Natural language explanations represent a proxy for evaluating explanation-based and multi-step Natural Language Inference (NLI) models. However, assessing the validity of explanations for NLI is challenging as it typically involves the crowd-sourcing of apposite datasets, a process that is time-consuming and prone to logical errors. To address existing limitations, this paper investigates the verification and refinement of natural language explanations through the integration of Large Language Models (LLMs) and Theorem Provers (TPs). Specifically, we present a neuro-symbolic framework, named Explanation-Refiner, that integrates TPs with LLMs to generate and formalise explanatory sentences and suggest potential inference strategies for NLI. In turn, the TP is employed to provide formal guarantees on the logical validity of the explanations and to generate feedback for subsequent improvements. We demonstrate how Explanation-Refiner can be jointly used to evaluate explanatory reasoning, autoformalisation, and error correction mechanisms of state-of-the-art LLMs as well as to automatically enhance the quality of explanations of variable complexity in different domains.",
+}
+
 @INPROCEEDINGS{10704818,
   author={Shaukat, Nabil and Dubey, Shival and Kaddouh, Bilal and Blight, Andy and Mudrich, Lenka and Ribeiro, Pedro and Araujo, Hugo and Richardson, Rob and Dennis, Louise and Cavalcanti, Ana and Mousavi, Mohammad},
   booktitle={2024 20th IEEE/ASME International Conference on Mechatronic and Embedded Systems and Applications (MESA)}, 
@@ -6,6 +25,7 @@
   volume={},
   number={},
   pages={1-7},
+note={[<span class="tas_vn">TAS Verifiability Node</span>]},
   keywords={Mechatronics;Software architecture;Surveillance;Computer architecture;Software;Personnel;Formal specifications;Robots;Testing;Drones;robochart;ros;drone;firefighting;software;robots;trustworthy architecture;trustworthy},
   doi={10.1109/MESA61532.2024.10704818}}
 
