--- a/pubs.bib
+++ b/pubs.bib
@@ -2781,4 +2781,16 @@ note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <sp
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{BECKER2025104917,
+title = "{An Expedited BDI Agent Architecture: Improving the Responsiveness of
+         Agent-based Autonomous Systems for Handling Critical Situations}",
+journal = {Robotics and Autonomous Systems},
+volume = {186},
+pages = {104917},
+year = {2025},
+issn = {0921-8890},
+doi = {10.1016/j.robot.2025.104917},
+author = {Leandro Buss Becker and Iago {de Oliveira Silvestre} and Jomi Fred Hubner and Michael Fisher},
+note={[<span class="raeng">RAEng</span>]}
+}
 
