--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,16 @@
+@INPROCEEDINGS{10794849,
+  author={Kolker, Simon and Dennis, Louise and Pereira, Ramon Fraga and Xu, Mengwei},
+  booktitle={2024 IEEE Space Computing Conference (SCC)}, 
+  title={Applying Ethical Decision Making on Space Missions}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={136-138},
+note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="car">Computational Agent Responsibility</span>]},
+  keywords={Ethics;Mars;Uncertainty;Autonomous systems;Space missions;Decision making;Relays;Ethical AI;Space missions;Decision Making},
+  doi={10.1109/SCC61854.2024.00022}}
+
+
 @inproceedings{quan-etal-2024-verification,
     title = "Verification and Refinement of Natural Language Explanations through {LLM}-Symbolic Theorem Proving",
     author = "Quan, Xin  and
