--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,14 @@
+@misc{abeywickrama2025autonomysafetyassuranceearly,
+      title={Autonomy and Safety Assurance in the Early Development of Robotics and Autonomous Systems}, 
+      author={Dhaminda B. Abeywickrama and Michael Fisher and Frederic Wheeler and Louise Dennis},
+      year={2025},
+      eprint={2501.18448},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+note={[<span class="cradle">CRADLE</span>]},
+      url={https://arxiv.org/abs/2501.18448}, 
+}
+
 @Inbook{Wright2025,
 author="Wright, Thomas
 and Dennis, Louise A.
