--- a/pubs.bib
+++ b/pubs.bib
@@ -5,8 +5,8 @@
       eprint={2501.18448},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-note={[<span class="cradle">CRADLE</span>]},
-      url={https://arxiv.org/abs/2501.18448}, 
+	note={[<span class="cradle">CRADLE</span>]},
+      url={https://arxiv.org/abs/2501.18448}
 }
 
 @Inbook{Wright2025,
