--- a/pubs.bib
+++ b/pubs.bib
@@ -9,7 +9,7 @@
       url={https://arxiv.org/abs/2501.18448}
 }
 
-@Inbook{Wright2025,
+@InProceedings{Wright2025,
 author="Wright, Thomas
 and Dennis, Louise A.
 and Woodcock, Jim
