--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,16 @@
+@INPROCEEDINGS{Abeywickrama2025ICSR,
+  author={Abeywickrama, Dhaminda B. and Fisher, Michael and Wheeler, Frederic and Dennis, Louise},
+  booktitle={2025 IEEE/ACM 22nd International Conference on Software and Systems Reuse (ICSR)}, 
+  title={Towards Patterns for a Reference Assurance Case for Autonomous Inspection Robots}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={95-100},
+  keywords={Industries;Roads;Inspection;Software;Safety;Complexity theory;Proposals;Standards;Autonomous robots;Formal verification;reference assurance case;assurance patterns;reuse;verification and validation;autonomous robots},
+  doi={10.1109/ICSR66718.2025.00016},
+  note={[<span class="cradle">CRADLE</span>]}
+}
+
 @misc{abeywickrama2025autonomysafetyassuranceearly,
       title={Autonomy and Safety Assurance in the Early Development of Robotics and Autonomous Systems}, 
       author={Dhaminda B. Abeywickrama and Michael Fisher and Frederic Wheeler and Louise Dennis},
