--- a/pubs.bib
+++ b/pubs.bib
@@ -22,7 +22,7 @@
       url={https://arxiv.org/abs/2501.18448}
 }
 
-@InBook{Wright2025,
+@INPROCEEDINGS{Wright2025,
 author="Wright, Thomas and Dennis, Louise A. and Woodcock, Jim and Foster, Simon",
 editor="Hinchey, Mike and Steffen, Bernhard",
 title={Formal Verification of BDI Agents},
