--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,22 @@
+@InProceedings{10.1007/978-3-031-88531-0_26,
+author="Taylor, Hazel M.
+and Luckcuck, Matt
+and Farrell, Marie
+and Jay, Caroline
+and Cangelosi, Angelo
+and Dennis, Louise A.",
+editor="Hess, Anne
+and Susi, Angelo",
+title="Eliciting Explainability Requirements for Safety-Critical Systems: A Nuclear Case Study",
+booktitle="Requirements Engineering: Foundation for Software Quality",
+year="2025",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="363--377",
+abstract="[Context {\&} Motivation] Explainable autonomous systems are increasingly essential for engendering trust, especially when they are deployed in safety-critical scenarios. [Question/Problem] Despite the robust reliability needed in critical settings, there remains a gap between Explainable AI and Requirements Engineering (RE), raising the question: can current RE techniques sufficiently elicit explainability requirements and what characteristics do these requirements have? [Principal Ideas/Results] We examine whether established RE techniques can be used to elicit explainability requirements and analyse the characteristics of such requirements. We answer these questions in the context of a nuclear robotics case study focused on navigation and task scheduling missions. [Contribution] We contribute: (1) an experience report of eliciting explainability requirements, (2) categories for explainability requirements for explainable autonomous robotic systems and (3) practical guidance for applying our approach in other safety-critical domains.",
+isbn="978-3-031-88531-0"
+}
+
 @INPROCEEDINGS{Abeywickrama2025ICSR,
   author={Abeywickrama, Dhaminda B. and Fisher, Michael and Wheeler, Frederic and Dennis, Louise},
   booktitle={2025 IEEE/ACM 22nd International Conference on Software and Systems Reuse (ICSR)}, 
