--- a/pubs.bib
+++ b/pubs.bib
@@ -41,11 +41,11 @@ isbn="978-3-031-88531-0"
       url={https://arxiv.org/abs/2501.18448}
 }
 
-@INPROCEEDINGS{Wright2025,
+@InBook{Wright2025,
 author="Wright, Thomas and Dennis, Louise A. and Woodcock, Jim and Foster, Simon",
 editor="Hinchey, Mike and Steffen, Bernhard",
-title={Formal Verification of BDI Agents},
-booktitle={The Combined Power of Research, Education, and Dissemination: Essays Dedicated to Tiziana Margaria on the Occasion of Her 60th Birthday},
+title="Formal Verification of BDI Agents",
+booktitle="The Combined Power of Research, Education, and Dissemination: Essays Dedicated to Tiziana Margaria on the Occasion of Her 60th Birthday",
 year="2025",
 publisher="Springer Nature Switzerland",
 address="Cham",
