--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,17 @@
+@article{Interlinked2,
+title = {The Human Factor: Addressing Computing Risks for Critical National Infrastructure towards 2040},
+journal = {Computers & Security},
+pages = {104524},
+year = {2025},
+issn = {0167-4048},
+doi = {https://doi.org/10.1016/j.cose.2025.104524},
+url = {https://www.sciencedirect.com/science/article/pii/S0167404825002135},
+author = {Charles Weir and Cecilia Loureiro-Koechlin and Lucy Hunt and Louise Dennis},
+keywords = {Cybersecurity, Critical National Infrastructure, CNI, Delphi method, Cyber resilience, Future studies},
+abstract = {The authors conducted a UK-based future study employing the Delphi method to explore the impact of emerging computing technologies on Critical National Infrastructure (CNI). The study engaged 22 domain experts specializing in software, cybersecurity, and CNI, whose roles all include forecasting technological trends and challenges. The findings propose making Internet Services a CNI sector, and suggested the weightiest concern to be human-centric challenges around the recovery from software disasters and cyberattacks. Other major concerns also related to human factors, such as attacks via operators, and errors stemming from poorly designed human-computer interfaces. The suggested mitigation strategies therefore concentrate on human-centred approaches. Key recommendations include promoting human-focused cyber resilience, and using legislation, regulation and standards to help establish it in CNI organizations.}
+}
+
+
 @InProceedings{10.1007/978-3-031-88531-0_26,
 author="Taylor, Hazel M.
 and Luckcuck, Matt
@@ -41,10 +55,10 @@ isbn="978-3-031-88531-0"
       url={https://arxiv.org/abs/2501.18448}
 }
 
-@InBook{Wright2025,
+@InProceedings{Wright2025,
+title="Formal Verification of BDI Agents",
 author="Wright, Thomas and Dennis, Louise A. and Woodcock, Jim and Foster, Simon",
 editor="Hinchey, Mike and Steffen, Bernhard",
-title="Formal Verification of BDI Agents",
 booktitle="The Combined Power of Research, Education, and Dissemination: Essays Dedicated to Tiziana Margaria on the Occasion of Her 60th Birthday",
 year="2025",
 publisher="Springer Nature Switzerland",
