--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,22 @@
+@inproceedings{Kolker25,
+author = {Kolker, Simon and Dennis, Louise A. and Pereira, Ramon Fraga and Xu, Mengwei},
+title = {Uncertain Machine Ethics Planning},
+year = {2025},
+isbn = {9798400714269},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+abstract = {Machine Ethics decisions should consider the implications of uncertainty over decisions. Decisions should be made over sequences of actions to reach preferable outcomes long term. The evaluation of outcomes, however, may invoke one or more moral theories, which might have conflicting judgements. Each theory will require differing representations of the ethical situation. For example, Utilitarianism measures numerical values, Deontology analyses duties, and Virtue Ethics emphasises moral character. While balancing potentially conflicting moral considerations, decisions may need to be made, for example, to achieve morally neutral goals with minimal costs. In this paper, we formalise the problem as a Multi-Moral Markov Decision Process and a Multi-Moral Stochastic Shortest Path Problem. We develop a heuristic algorithm based on Multi-Objective AO*, utilising Sven-Ove Hansson's Hypothetical Retrospection procedure for ethical reasoning under uncertainty. Our approach is validated by a case study from Machine Ethics literature: the problem of whether to steal insulin for someone who needs it.},
+booktitle = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems},
+pages = {1154–1162},
+numpages = {9},
+keywords = {machine ethics, multi-objective planning, uncertainty},
+location = {Detroit, MI, USA},
+series = {AAMAS '25},
+note={[<span class="cradle">CRADLE</span>]}
+}
+
+  
+
 @article{Interlinked2,
 title = {The Human Factor: Addressing Computing Risks for Critical National Infrastructure towards 2040},
 journal = {Computers & Security},
