--- a/pubs.bib
+++ b/pubs.bib
@@ -89,6 +89,41 @@ note={[<span class="tas_vn">TAS Verifiability Node</span>]},
 url="https://doi.org/10.1007/978-3-031-73887-6_20"
 }
 
+
+@article{Groove25,
+author = {Ghaffari Saadat, Maryam and Dixon, Clare and Fisher, Michael},
+title = "{Specification and Verification of the Alpha Swarm Algorithm using NuXMV and GROOVE}",
+year = {2025},
+publisher = {Association for Computing Machinery},
+issn = {0934-5043},
+doi = {10.1145/3736689},
+journal = {Formal Aspects of Computing},
+note = {[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>]]}
+}
+
+@article{SILVESTRE2025,
+title = "{Enhanced Agent-oriented Programming for Robot Teams}",
+journal = {Engineering Applications of Artificial Intelligence},
+volume = {158},
+pages = {111390},
+year = {2025},
+issn = {0952-1976},
+doi = {10.1016/j.engappai.2025.111390},
+author = {Iago de Oliveira Silvestre and Leandro Buss Becker and Michael Fisher and Jomi Fred HÃŒbner and Maiquel {de Brito}},
+note={[<span class="raeng">RAEng</span>]}
+}
+
+
+@article{KDF2025,
+title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}”,
+journal = {Theoretical Computer Science},
+volume = {1046},
+pages = {115319},
+doi = {10.1016/j.tcs.2025.115319},
+author = {Georgios Kourtis and Clare Dixon and Michael Fisher},
+note = {[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, [<span class="raeng">RAEng</span>]]}
+}
+
 @INPROCEEDINGS{10794849,
   author={Kolker, Simon and Dennis, Louise and Pereira, Ramon Fraga and Xu, Mengwei},
   booktitle={2024 IEEE Space Computing Conference (SCC)}, 
