--- a/pubs.bib
+++ b/pubs.bib
@@ -15,8 +15,6 @@ series = {AAMAS '25},
 note={[<span class="cradle">CRADLE</span>]}
 }
 
-  
-
 @article{Interlinked2,
 title = {The Human Factor: Addressing Computing Risks for Critical National Infrastructure towards 2040},
 journal = {Computers & Security},
@@ -113,7 +111,6 @@ author = {Iago de Oliveira Silvestre and Leandro Buss Becker and Michael Fisher 
 note={[<span class="raeng">RAEng</span>]}
 }
 
-
 @article{KDF2025,
 title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}”,
 journal = {Theoretical Computer Science},
@@ -121,7 +118,7 @@ volume = {1046},
 pages = {115319},
 doi = {10.1016/j.tcs.2025.115319},
 author = {Georgios Kourtis and Clare Dixon and Michael Fisher},
-note = {[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, [<span class="raeng">RAEng</span>]]}
+note = {[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
 }
 
 @INPROCEEDINGS{10794849,
