--- a/pubs.bib
+++ b/pubs.bib
@@ -107,7 +107,7 @@ pages = {111390},
 year = {2025},
 issn = {0952-1976},
 doi = {10.1016/j.engappai.2025.111390},
-author = {Iago de Oliveira Silvestre and Leandro Buss Becker and Michael Fisher and Jomi Fred HÃŒbner and Maiquel {de Brito}},
+author = {Iago de Oliveira Silvestre and Leandro Buss Becker and Michael Fisher and Jomi Fred Hubner and Maiquel {de Brito}},
 note={[<span class="raeng">RAEng</span>]}
 }
 
