--- a/pubs.bib
+++ b/pubs.bib
@@ -28,7 +28,6 @@ keywords = {Cybersecurity, Critical National Infrastructure, CNI, Delphi method,
 abstract = {The authors conducted a UK-based future study employing the Delphi method to explore the impact of emerging computing technologies on Critical National Infrastructure (CNI). The study engaged 22 domain experts specializing in software, cybersecurity, and CNI, whose roles all include forecasting technological trends and challenges. The findings propose making Internet Services a CNI sector, and suggested the weightiest concern to be human-centric challenges around the recovery from software disasters and cyberattacks. Other major concerns also related to human factors, such as attacks via operators, and errors stemming from poorly designed human-computer interfaces. The suggested mitigation strategies therefore concentrate on human-centred approaches. Key recommendations include promoting human-focused cyber resilience, and using legislation, regulation and standards to help establish it in CNI organizations.}
 }
 
-
 @InProceedings{10.1007/978-3-031-88531-0_26,
 author="Taylor, Hazel M.
 and Luckcuck, Matt
@@ -87,7 +86,6 @@ note={[<span class="tas_vn">TAS Verifiability Node</span>]},
 url="https://doi.org/10.1007/978-3-031-73887-6_20"
 }
 
-
 @article{Groove25,
 author = {Ghaffari Saadat, Maryam and Dixon, Clare and Fisher, Michael},
 title = "{Specification and Verification of the Alpha Swarm Algorithm using NuXMV and GROOVE}",
@@ -116,6 +114,7 @@ title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with B
 journal = {Theoretical Computer Science},
 volume = {1046},
 pages = {115319},
+year = {2025},
 doi = {10.1016/j.tcs.2025.115319},
 author = {Georgios Kourtis and Clare Dixon and Michael Fisher},
 note = {[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
