--- a/pubs.bib
+++ b/pubs.bib
@@ -93,8 +93,7 @@ volume = {1046},
 pages = {115319},
 year = {2025},
 doi = {10.1016/j.tcs.2025.115319},
-author = {Georgios Kourtis and Clare Dixon and Michael Fisher},
-note={[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
+author = {Georgios Kourtis and Clare Dixon and Michael Fisher}
 }
 
 @article{Groove25,
