--- a/pubs.bib
+++ b/pubs.bib
@@ -87,13 +87,14 @@ url="https://doi.org/10.1007/978-3-031-73887-6_20"
 }
 
 @article{KDF2025,
-title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}”,
-journal = {Theoretical Computer Science},
-volume = {1046},
-pages = {115319},
-year = {2025},
-doi = {10.1016/j.tcs.2025.115319},
-author = {Georgios Kourtis and Clare Dixon and Michael Fisher}
+	title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}”,
+	author = {Georgios Kourtis and Clare Dixon and Michael Fisher},
+	journal = {Theoretical Computer Science},
+	volume = {1046},
+	pages = {115319},
+	year = {2025},
+	doi = {10.1016/j.tcs.2025.115319},
+	note={[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
 }
 
 @article{Groove25,
