--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,15 @@
+
+@article{KDF-monodic2025,
+	title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}”,
+	author = {Kourtis, Georgios and Dixon, Clare and Fisher, Michael},
+	journal = {Theoretical Computer Science},
+	volume = {1046},
+	pages = {115319},
+	year = {2025},
+	doi = {10.1016/j.tcs.2025.115319},
+note={[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
+}
+
 @inproceedings{Kolker25,
 author = {Kolker, Simon and Dennis, Louise A. and Pereira, Ramon Fraga and Xu, Mengwei},
 title = {Uncertain Machine Ethics Planning},
@@ -84,17 +96,6 @@ isbn="978-3-031-73887-6",
 doi="10.1007/978-3-031-73887-6_20",
 note={[<span class="tas_vn">TAS Verifiability Node</span>]},
 url="https://doi.org/10.1007/978-3-031-73887-6_20"
-}
-
-@article{KDF2025,
-	title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}”,
-	author = {Georgios Kourtis and Clare Dixon and Michael Fisher},
-	journal = {Theoretical Computer Science},
-	volume = {1046},
-	pages = {115319},
-	year = {2025},
-	doi = {10.1016/j.tcs.2025.115319},
-	note={[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
 }
 
 @article{Groove25,
