Fixing the title in KDF-monodic2025

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,13 +1,12 @@
-
 @article{KDF-monodic2025,
-	title = “{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}”,
-	author = {Kourtis, Georgios and Dixon, Clare and Fisher, Michael},
-	journal = {Theoretical Computer Science},
-	volume = {1046},
-	pages = {115319},
-	year = {2025},
-	doi = {10.1016/j.tcs.2025.115319},
-note={[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
+	title        = {{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}},
+	author       = {Kourtis, Georgios and Dixon, Clare and Fisher, Michael},
+	year         = 2025,
+	journal      = {Theoretical Computer Science},
+	volume       = 1046,
+	pages        = 115319,
+	doi          = {10.1016/j.tcs.2025.115319},
+	note         = {[<span class="s4">S4</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
 }
 
 @inproceedings{Kolker25,
