Add new publication entry to pubs.bib

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,22 @@
+@InProceedings{10.1007/978-3-032-08049-3_7,
+author="Abeywickrama, Dhaminda B.
+and Bishop, Christopher
+and Watson, Simon
+and Wheeler, Frederic
+and Fisher, Michael
+and Dennis, Louise",
+editor="Ferrando, Angelo
+and Cardoso, Rafael C.",
+title="Corroborative V{\&}V for Autonomous Systems: Integrating Evidence and Discrepancy Analysis for Safety Assurance",
+booktitle="Agents and Robots for reliable Engineered Autonomy",
+year="2025",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="110--130",
+aisbn="978-3-032-08049-3",
+note={[<span class="cradle">CRADLE</span>]}
+}
+
 @article{KDF-monodic2025,
 	title        = {{Monodic Fragments of Probabilistic First-order Temporal Logic with Bounded Semantics}},
 	author       = {Kourtis, Georgios and Dixon, Clare and Fisher, Michael},
