Add entry for ROSMonitoring 2.0 publication
Added new entry for 'ROSMonitoring 2.0' in the bibliography.

--- a/pubs.bib
+++ b/pubs.bib
@@ -210,6 +210,30 @@ note={[<span class="tas_vn">TAS Verifiability Node</span>]},
 note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="car">Computational Agent Responsibility</span>]}
 }
 
+@inproceedings{DBLP:journals/corr/abs-2411-14367,
+  author       = {Maryam Ghaffari Saadat and
+                  Angelo Ferrando and
+                  Louise A. Dennis and
+                  Michael Fisher},
+  editor       = {Matt Luckcuck and
+                  Mengwei Xu},
+  title        = {ROSMonitoring 2.0: Extending {ROS} Runtime Verification to Services
+                  and Ordered Topics},
+  booktitle    = {Proceedings Sixth International Workshop on Formal Methods for Autonomous
+                  Systems, FMAS@iFM 2024, Manchester, UK, 11th and 12th of November
+                  2024},
+  series       = {{EPTCS}},
+  volume       = {411},
+  pages        = {38--55},
+  year         = {2024},
+  url          = {https://doi.org/10.4204/EPTCS.411.3},
+  doi          = {10.4204/EPTCS.411.3},
+  timestamp    = {Fri, 12 Dec 2025 15:44:30 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2411-14367.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+note={[<span class="tas_vn">TAS Verifiability Node</span>]}
+}
+
 @InProceedings{10.1007/978-3-031-43264-4_22,
 author="Stringer, Peter
 and Cardoso, Rafael C.
