Add new publication entries to pubs.bib

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,40 @@
+@InProceedings{10.1007/978-3-032-18011-7_14,
+author="Rodriguez, Sebastian
+and Bairy, Akhila
+and Baldoni, Matteo
+and Benjamin, Patrick
+and Blessing, Constantin
+and Brandstetter, Nicolas
+and Chopra, Amit K.
+and Clemen, Thomas
+and Dennis, Louise A.
+and Esmaeili, Ahmad
+and Feng, Lu
+and Ferrando, Angelo
+and Ghorrati, Zahra
+and Guillet, Victor
+and G{\"u}rcan, {\"O}nder
+and Hans, Soham
+and Herber, James
+and Mascardi, Viviana
+and Mauri, Marcel
+and M{\"u}ller, J{\"o}rg P.
+and Thangarajah, John
+and Tyl, Rafa{\l}
+and Yang, Yi",
+editor="Rodriguez, Sebastian
+and Feng, Lu
+and M{\"u}ller, J{\"o}rg P.",
+title="Engineering the Next Generation of Multi-agent Systems: A Community Roadmap from EMAS 2025",
+booktitle="Engineering Multi-Agent Systems",
+year="2026",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="238--258",
+abstract="This paper presents the outcomes of an open-floor session held at the 13th International Workshop on Engineering Multi-Agent Systems (EMAS 2025), aimed at co-developing a research roadmap for the EMAS community. Participants collaboratively identified and prioritised challenges in engineering large-scale, adaptive multiagent systems, particularly considering the need to engineer systems that can seamlessly integrate learning and reasoning. Through structured group discussions, four key challenges emerged: explainability in heterogeneous environments, environment modeling, handling dynamic contexts, and communication standardisation. For each of the challenges, participants proposed and ranked potential solutions based on impact and effort. The resulting roadmap highlights concrete research directions toward engineering intelligent, explainable, and interoperable multiagent systems that effectively integrate reasoning and learning in dynamic environments.",
+isbn="978-3-032-18011-7"
+}
+
 @InProceedings{10.1007/978-3-032-08049-3_7,
 author="Abeywickrama, Dhaminda B.
 and Bishop, Christopher
